<resources>
    <string name="app_name">Loka</string>
    <string name="edittext_hint">Ketikkan pesan</string>
    <string name="btn_send_desc">Kirim Pesan</string>
    <string name="no_connection">Tidak ada koneksi</string>

    <string name="description1">Obrolan Bot kami dirancang \nuntuk menjawab pertanyaan Anda tentang layanan ini</string>
    <string name="description2">Tidak Perlu menunggu balasan layanan pelanggan kami</string>
    <string name="description3">Apa yang anda tunggu?</string>
    <string name="title1">Butuh bantuan?</string>
    <string name="title2">Dengan Instan</string>
    <string name="title3">Ayo mulai</string>
    <string name="img_onboard1_desc">Orientasi Gambar Pertama</string>
    <string name="img_onboard2_desc">Orientasi Gambar Kedua</string>
    <string name="img_onboard3_desc">Orientasi Gambar Ketiga</string>
    <string name="btn_onboard_next_desc">ke Selanjutnya</string>
    <string name="btn_onboard_prev_desc">Ke sebelumnya</string>
    <string name="btn_onboard_done_desc">selesai</string>
    <string name="img_splashlogo">Logo Splash</string>

    <string name="connection_dialog_title">Koneksi terputus</string>
    <string name="connection_dialog_content">Perangkat Anda tidak terhubung ke internet. Pastikan untuk memeriksa koneksi internet Anda sebelum melanjutkan aplikasi</string>
    <string name="connection_dialog_confirm">Tutup</string>
    <string name="category1">Sapa si Loka</string>
    <string name="category2">Informasi Umum Pembayaran</string>
    <string name="category3">Informasi Promo</string>
    <string name="category4">Kupon Traveloka</string>
    <string name="category5">Pembayaran dengan IDR</string>
    <string name="category6">Pemindai QR Traveloka</string>
    <string name="icon_category_desc">Kategori Ikon</string>
    <string name="title_Category">Perihal Apa yang Ingin \nDitanyakan?</string>
    <string name="ask_a_question">tanyakan sesuatu</string>
    <string name="back_to_category">Kembali ke kategori</string>
    <string name="contentdesc_button_ask">tanyakan sebuah pertanyaan tombol</string>
    <string name="bot_name">SLoka</string>
    <string name="halo_pengguna">Halo Pengguna</string>
    <string name="memilih_fitur">Ingin Menggunakan fitur apakah anda?</string>
    <string name="voice_nassist">Bantuan \nSuara</string>
    <string name="menggunakan_aksesbilitas">menggunakan aksesbilitas</string>
    <string name="just_ntext">Hanya\nTeks</string>
    <string name="tidak_menggunakan_aksesbilitas">tidak menggunakan aksesbilitas</string>
    <string name="gambar_fitur_aksesbilitas">fitur aksesbilitas</string>
    <string name="pilih_kategori_perihal_apa_yang_ingin_anda_tanyakan">pilih kategori perihal apa yang ingin anda tanyakan</string>
    <string name="informasi_umum_tentang_pembayaran">informasi umum tentang pembayaran</string>
    <string name="informasi_promo">informasi promo</string>
    <string name="kupon_traveloka">kupon traveloka</string>
    <string name="pembayaran_dengan_rupiah">pembayaran dengan rupiah</string>
    <string name="traveloka_qr_scanner">Pemindai QR Traveloka</string>
    <string name="sloka">Sloka</string>
    <string name="kembali_ke_kategori">kembali ke kategori</string>
    <string name="daftar_pesan">daftar pesan</string>

    <string name="back_title">Kembali</string>
</resources>