<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_chat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/frame_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/isConnected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/no_connection"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/loading"
        android:layout_width="101dp"
        android:layout_height="49dp"
        android:layout_marginStart="-10dp"
        android:layout_marginBottom="-8dp"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/loader"
        app:layout_constraintBottom_toTopOf="@+id/frame_layout"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/blind_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e4e4e4"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/ask_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ask_a_question"
                android:contentDescription="@string/contentdesc_button_ask"/>

            <Button
                android:id="@+id/back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back_to_category"
                android:contentDescription="@string/back_to_category"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e4e4e4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/edittext_chat_log"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edittext_chat"
                android:ems="10"
                android:hint="@string/edittext_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:minHeight="48dp"
                android:paddingVertical="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:singleLine="false"
                android:textColor="@color/black"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/send_button_chat_log"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/send_button_chat_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_send"
                app:fabCustomSize="45dp"
                android:backgroundTint="#FFD1FFB8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/btn_send_desc" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>